# EV-charging-rl

./: .gitignore  DDQN_ _A2C_ _GA.ipynb  LICENSE  README.md  main.py  pyproject.toml
configs/: explore_env.yaml  test_agent.yaml  train_agent.yaml  train_ddqn.yaml  train_ga.yaml
configs/algo/: a2c.yaml  ddqn.yaml  ga.yaml  random.yaml
configs/env/: train.yaml
results/test_in_distribution/: a2c_evaluation_results.json  ddqn_evaluation_results.json  ga_evaluation_results.json  random_evaluation_results.json
results/train_ep_congestion_norm_mean/: a2c_seed_0_train_ep_congestion_norm_mean.json  a2c_seed_1_train_ep_congestion_norm_mean.json  a2c_seed_2_train_ep_congestion_norm_mean.json  a2c_seed_3_train_ep_congestion_norm_mean.json  a2c_seed_4_train_ep_congestion_norm_mean.json  ddqn_seed_0_train_ep_congestion_norm_mean.json  ddqn_seed_1_train_ep_congestion_norm_mean.json  ddqn_seed_2_train_ep_congestion_norm_mean.json  ddqn_seed_3_train_ep_congestion_norm_mean.json  ddqn_seed_4_train_ep_congestion_norm_mean.json
results/train_ep_nb_cars_traveling_mean/: a2c_seed_0_train_ep_nb_cars_traveling_mean.json  a2c_seed_1_train_ep_nb_cars_traveling_mean.json  a2c_seed_2_train_ep_nb_cars_traveling_mean.json  a2c_seed_3_train_ep_nb_cars_traveling_mean.json  a2c_seed_4_train_ep_nb_cars_traveling_mean.json  ddqn_seed_0_train_ep_nb_cars_traveling_mean.json  (+4 more)
scripts/: explore_env.py  plot_ga_train_results.py  plot_test_results.py  plot_train_metrics.py  plot_train_results.py  test_agent.py  train_agent.py  train_agent_shamim.py  train_ddqn.py  train_ga.py
src/agents/: ddqn.py
(+65 files in other folders)
